# netscope

./: .gitignore  CLAUDE.md  README.md  mypy.ini  netscope.desktop  netscope.metainfo.xml  pyproject.toml
.github/workflows/: ci.yml  release.yml
netscope/: __init__.py  __main__.py  cli.py  config.py  main.py
netscope/core/: __init__.py  alert_rules.py  bandwidth.py  connections.py  data_cap.py  errors.py  export.py  geoip.py  history.py  iptables.py  notifications.py  process_bandwidth.py  protocols.py  services.py  speed_test.py  theme.py  traffic_blocker.py  utils.py
netscope/resources/: __init__.py
netscope/widgets/: __init__.py  bandwidth_graph.py  bandwidth_panel.py  destinations_panel.py  historical_graph.py  listening_ports.py  process_bandwidth_table.py  process_table.py  settings_dialog.py  speed_test_dialog.py  tray_icon.py
netscope/windows/: __init__.py  main_window.py
netscope/workers/: __init__.py  bandwidth_worker.py  connection_worker.py
tests/: __init__.py  conftest.py  test_alert_rules.py  test_bandwidth.py  test_config.py  test_data_cap.py  test_history.py  test_integration.py  test_theme.py  test_theme_switch.py
