[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "netscope"
version = "0.1.0"
description = "Real-time Linux network bandwidth monitor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["network", "bandwidth", "monitor", "linux", "iptables"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "PyQt6>=6.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "mypy>=1.0",
    "ruff>=0.4",
    "PyQt6-stubs",
]

[project.scripts]
netscope = "netscope.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netscope*"]

[tool.setuptools.data-files]
"share/applications" = ["netscope.desktop"]
"share/metainfo" = ["netscope.metainfo.xml"]
"share/icons/hicolor/scalable/apps" = ["netscope/resources/icons/app-icon.svg"]

[tool.mypy]
files = ["netscope"]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
